--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
-<!DOCTYPE HTML>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название страницы</title>
-    <meta name="description" content="Описание страницы" />
-    
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
-    <link rel="icon" href="/img/favicon.png">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
-  </head>
-  <body>
-    <header>
-      Шапка
-      <nav>
-        Навигация
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h1>Заголовок страницы</h1>
-        Основная часть
-      </section>
-    </main>
-    <aside>
-      Боковая колонка (сайдбар)
-    </aside>
-    <footer>
-      Подвал
-    </footer>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Веб</title>
+</head>
+<body>
+  <h1>Лабораторные работы</h1>
+  <ol>
+    <li><a href="#">Лабораторная 1</a></li>
+  </ol>
+</body>
 </html>
