--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -92,6 +92,27 @@
     <div align="center" style="font-size:15px">Химическая формула воды</div>
     <div align="left" style="font-size:29px">H2O</div>
 
+    <h4>3.1.2. Изменение начертания и гарнитуры</h4>
+    i: <i>Используется для текста, который по разным причинам отличается от обычного текста</i>
+    <br>
+    b: <b>Используется для привлечения внимания к тексту, не указывая на то, что это более важно</b>
+    <br>
+    u: <u>Используется для разметки текста, который должен отличаться стилистически от обычного текста</u>
+    <br>
 
+
+    <h4>3.1.3. Смысловые элементы («phrase elements»)</h4>
+    em: <em>Предназначен для текста, имеющего особое значение или на который следует сделать акцент</em>
+    <br>
+    strong: <strong>Элемент сильной значимости указывает на то, что его содержание имеет большое значение, серьезность или срочность</strong>
+    <br>
+    cite: <cite>Цитата или ссылка на другие ресурсы</cite>
+    <br>
+    code: <code>Фрагмент компьютерного кода</code>
+    
+    <hr>
+
+
+    Перепечатка материала не преследуется по закону
   </body>
 </html>
