--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <h1>Лабораторные работы</h1>
   <ol>
-    <li><a href="lab1/lab1_1.html">Лабораторная 1</a></li>
+    <li><a href="lab1/lab1_1.html">Лабораторная 1_1</a></li>
+    <li><a href="lab1/lab1_2.html">Лабораторная 1_2</a></li>
   </ol>
 </body>
 </html>
