--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <ol>
     <li><a href="lab1/lab1_1.html">Лабораторная 1_1</a></li>
     <li><a href="lab1/lab1_2.html">Лабораторная 1_2</a></li>
+    <li><a href="lab1/lab1_3/doc.html">Лабораторная 1_3</a></li>
+    <li><a href="lab1/lab1_4.html">Лабораторная 1_4</a></li>
+    <li><a href="lab1/lab1_5.html">Лабораторная 1_5</a></li>
   </ol>
 </body>
 </html>
