--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -10,10 +10,10 @@
 <!-- Сделайте элементы списка ссылками на соответствующие заголовки h2 -->
 	<ul>
 		<li><a href="#h1">Как сделать ссылку</a></li>
-		<li><a href="#h2">Цвет ссылок<a ></li>
-		<li><a href="#h3">Атрибут target<a ></li>
-		<li><a href="#h4">Изображение в качестве ссылки<a ></li>
-		<li><a href="#h5">Ссылки внутри страницы<a ></li>
+		<li><a href="#h2">Цвет ссылок</a ></li>
+		<li><a href="#h3">Атрибут target</a ></li>
+		<li><a href="#h4">Изображение в качестве ссылки</a ></li>
+		<li><a href="#h5">Ссылки внутри страницы</a></li>
 	</ul>
 </nav>
 
@@ -23,7 +23,7 @@
 
 <hr>
 
-<h2><a id="h1">Как сделать ссылку</a></h2>
+<h2 id="h1">Как сделать ссылку</h2>
 <p>Для создания ссылки необходимо сообщить браузеру, что является 
   ссылкой, а также указать адрес документа, на который следует сделать 
   ссылку. Оба действия выполняются с помощью тега <code>&lt;a&gt;</code>, 
@@ -90,7 +90,7 @@
 
 <hr>
 
-<h2><a id="h2">Цвет ссылок<a ></h2>
+<h2 id="h2">Цвет ссылок</h2>
 <p>Цвета ссылок задаются в качестве атрибутов тега <code>&lt;body&gt;</code>. 
  Атрибуты являются необязательными и если они не указаны используются 
   значения по умолчанию.</p>
@@ -129,7 +129,7 @@
 
 <hr>
 
-<h2><a id="h3">Атрибут target<a ></h2>
+<h2 id="h3">Атрибут target </h2>
 <p>По умолчанию, при переходе по ссылке документ открывается в текущем окне или 
   фрейме. При необходимости, это условие может быть изменено атрибутом <code>target</code> 
   тега <code>&lt;a&gt;</code>. Этот атрибут может принимать следующие 
@@ -203,7 +203,7 @@
 
 <hr>
 
-<h2><a id="h4">Изображение в качестве ссылки<a ></h2>
+<h2 id="h4">Изображение в качестве ссылки</h2>
 <p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в 
   этом случае надо поместить между тегами <code>&lt;a&gt;</code> 
   и <code>&lt;/a&gt;</code>, как показано в примере&nbsp;7.</p>
@@ -249,7 +249,7 @@
 
 <hr>
 
-<h2><a id="h5">Ссылки внутри страницы<a ></h2>
+<h2 id="h5">Ссылки внутри страницы</h2>
 <p>
 Якорем называется закладка с уникальным именем на определённом месте веб-страницы, предназначенная для перехода к ней по ссылке. Якоря удобно применять в документах большого объёма, чтобы можно было быстро переходить к нужному разделу.
 </p>
