--- a/lab2/lab2_1.html
+++ b/lab2/lab2_1.html
@@ -6,40 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <ul>
+    <ul style="list-style-type: disc;">
     <li> Курсы
-    <ul>
-	<li>1.Каталог курсов
-        <ul>
-		<li>
+    <ul style="list-style-type: decimal;">
+	<li>Каталог курсов
+        <ul style="list-style-type: none;">
+		<li >
         Курсы для пользователей
-			<ul><li>Компьютерные курсы для начинающих, Office 2003, Курсы для продвинутых пользователей</li></ul>
+			<ul style="list-style-type: none;"><li>Компьютерные курсы для начинающих, Office 2003, Курсы для продвинутых пользователей</li></ul>
 		</li>
         <li>
         Настройка и ремонт ПК
-            <ul><li>Настройка офисных и домашних компьютеров, Техническое обслуживание и ремонт ПЭВМ</li></ul>
+            <ul style="list-style-type: none;"><li>Настройка офисных и домашних компьютеров, Техническое обслуживание и ремонт ПЭВМ</li></ul>
 		</li>
         <li>
         Интернет-технологии
-            <ul><li>Интернет, PHP, Web-мастеринг, Web-дизайн, Flash</li></ul>
+            <ul style="list-style-type: none;"><li>Интернет, PHP, Web-мастеринг, Web-дизайн, Flash</li></ul>
 		</li>
         <li>
         Компьютерная графика, верстка, дизайн
-            <ul><li>Photoshop, CorelDRAW, QuarkXPress, InDesign</li></ul>
+            <ul style="list-style-type: none;"><li>Photoshop, CorelDRAW, QuarkXPress, InDesign</li></ul>
         </li>
         </ul>
     </li>
-    </ul>    
-    2.Дистанционное обучение
-	3.Запись на курсы
-	4.Расписание курсов
-	5.Экзамены
-	6.Документы об окончании
+       
+    <li>Дистанционное обучение</li>
+	<li>Запись на курсы</li>
+	<li>Расписание курсов</li>
+	<li>Экзамены</li>
+	<li>Документы об окончании</li>
+    </ul> 
     </li>   
-    - Специальные предложения
-	    a.Скидки
-	    b.Обучение в кредит
-	    c.Бесплатные занятия для наших слушателей
+    <br>
+    <li>Специальные предложения
+	<ul style="list-style-type: lower-alpha;">
+        <li>Скидки</li>
+	    <li>Обучение в кредит</li>
+	    <li>Бесплатные занятия для наших слушателей</li>
+    </ul>    
+    </li>
     </ul>
 
 </body>
