--- a/lab2/lab2_1.html
+++ b/lab2/lab2_1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul style="list-style-type: disc;">
-    <li> Курсы
+    <li style="margin-bottom: 2em;"> Курсы
     <ul style="list-style-type: decimal;">
 	<li>Каталог курсов
         <ul style="list-style-type: none;">
@@ -37,7 +37,7 @@
 	<li>Документы об окончании</li>
     </ul> 
     </li>   
-    <br>
+
     <li>Специальные предложения
 	<ul style="list-style-type: lower-alpha;">
         <li>Скидки</li>
